--- a/src/main/webapp/reportInstitution/report_list.xhtml
+++ b/src/main/webapp/reportInstitution/report_list.xhtml
@@ -14,7 +14,7 @@
                         <div class="row" >
                             <div class="col-md-3" >
                                 <p:accordionPanel >
-                                    <p:tab title="All Reports">
+                                    <p:tab title="Lists">
                                         <div class="container-fluid my-3">
                                             <p:commandButton ajax="false" value="All Bills" action="/reportInstitution/all_bills"
                                                              styleClass="btn btn-primary w-100 my-2"></p:commandButton>
