Signed-off-by: buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/pharmacy/pharmacy_search_purcharse_GRN_bill.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_search_purcharse_GRN_bill.xhtml
@@ -24,7 +24,7 @@
 
                                 <h:outputLabel value="Dealer"/>
                                 <p:autoComplete completeMethod="#{dealerController.completeDealor}" 
-                                                value="#{searchController.dealar}" 
+                                                value="#{searchController}" 
                                                 var="d"
                                                 itemValue="#{d}"
                                                 itemLabel="#{d.name}"
