Closes #540 Closed #540 Signed-off-by: buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/admin/admin_items_index.xhtml
+++ b/src/main/webapp/admin/admin_items_index.xhtml
@@ -51,6 +51,12 @@
 
                                 </h:panelGrid>
                             </p:tab>
+                            <p:tab title="Reports">
+                                <h:panelGrid columns="1" >
+                                    <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Item List"
+                                                       action="#{itemController.navigateToListAllItems()}" ></p:commandButton>
+                                </h:panelGrid>
+                            </p:tab>
                             <p:tab title="Manage Metadata">
                                 <h:panelGrid columns="1" >
                                     <p:commandButton   class="btn btn-primary w-100 my-2"  ajax="false" value="Relationships" action="relationships" ></p:commandButton>
