--- a/src/main/webapp/bill_summery.xhtml
+++ b/src/main/webapp/bill_summery.xhtml
@@ -253,7 +253,7 @@
                                         <h:inputText value="#{billSearch.billSearch.paidAmount}"/>
 
                                         <h:outputLabel value="Balance:" ></h:outputLabel>
-                                        <h:inputText value="#{billSearch.billSearch.balance}"/>
+                                        <h:outputLabel value="#{billSearch.billSearch.balance}"/>
 
                                         <h:outputLabel value="PerformInstitutionFee" ></h:outputLabel>
                                         <h:inputText value="#{billSearch.billSearch.performInstitutionFee}" />
