--- a/src/main/webapp/emr/reports/amps.xhtml
+++ b/src/main/webapp/emr/reports/amps.xhtml
@@ -33,7 +33,7 @@
                                     <h:outputText value="#{item.name}" />
                                 </p:column>
 
-                                <p:column headerText="Code" filterBy="#{item.code}" filterMatchMode="contains" sortBy="#{item.code}">
+                                <p:column rendered="false" headerText="Code" filterBy="#{item.code}" filterMatchMode="contains" sortBy="#{item.code}">
                                     <h:outputText value="#{item.code}" />
                                 </p:column>
                                 
