--- a/src/main/webapp/admin_user_privilages.xhtml
+++ b/src/main/webapp/admin_user_privilages.xhtml
@@ -14,20 +14,17 @@
 
             <ui:define name="content">
                 <h:form  >
-                    <h:panelGroup  rendered="#{!webUserController.hasPrivilege('AdminManagingUsers') and not sessionController.firstLogin}"  >
+                    <h:panelGroup  rendered="#{!webUserController.hasPrivilege('AdminManagingUsers')}"  >
                         <p:outputLabel value="YOU ARE NOT AUTHERIZED." ></p:outputLabel>
                     </h:panelGroup>
-                    <p:panelGrid columns="2"  rendered="#{webUserController.hasPrivilege('AdminManagingUsers')  or sessionController.firstLogin}" >                   
+                    <p:panelGrid columns="2"  rendered="#{webUserController.hasPrivilege('AdminManagingUsers')}" >                   
 
                         <p:panel header="Manage User Privilages"   >
 
 
                             <f:facet name="header" >
                                 <h:outputLabel value="Manage User Privilages"/>
-                                <p:commandButton value="Update User Privilage" 
-                                                 action="#{userPrivilageController.savePrivileges()}"
-                                                 ajax="false" 
-                                                  >  
+                                <p:commandButton value="Update User Privilage"  action="#{userPrivilageController.savePrivileges()}" ajax="false" onclick="onSubmitButton();" >  
                                 </p:commandButton>
 
 
@@ -48,10 +45,9 @@
 
                             <p:panel id="tree">
                                 <p:growl id="messages" showDetail="true" escape="false"/>  
-                                <p:tree value="#{userPrivilageController.root}" var="node"  
-                                        selectionMode="checkbox"
-                                        selection="#{userPrivilageController.selectedNodes}"
-                                        >  
+                                <p:tree value="#{userPrivilageController.tmp}" var="node"  
+                                        selectionMode="checkbox" 
+                                        selection="#{userPrivilageController.selectedNodes}">  
                                     <p:treeNode>  
                                         <h:outputText value="#{node}" />  
                                     </p:treeNode>  
