Signed-off-by: buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/pharmacy/pharmacy_sale_without_stock.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_sale_without_stock.xhtml
@@ -19,6 +19,7 @@
                         <div class="row" >
                             <div class="col-md-12" >
                                 <h:panelGroup id="panelError" >
+                                    <p:growl ></p:growl>
                                     <h:panelGroup  
                                         rendered="#{pharmacySaleWithoutStockController.errorMessage ne null}">
                                         <p:outputLabel value="#{pharmacySaleWithoutStockController.errorMessage}" ></p:outputLabel>
