Closes #547 Signed-off-by: buddhika <buddhika@ohmis1.asia-southeast1-b.c.my-project-1537433467858.internal>

--- a/src/main/webapp/dataAdmin/admin_data_administration.xhtml
+++ b/src/main/webapp/dataAdmin/admin_data_administration.xhtml
@@ -25,7 +25,7 @@
                                                      class="btn btn-block"
                                                      action="#{searchController.toSearchBills}" 
                                                      rendered="#{webUserController.hasPrivilege('Search')}"></p:commandButton>
-                                    <p:commandButton value="List All Bill"  ajax="false"
+                                    <p:commandButton value="List All Bills"  ajax="false"
                                                      class="btn btn-block"
                                                      action="#{searchController.toListAllBills}" 
                                                      rendered="#{webUserController.hasPrivilege('Search')}"></p:commandButton>
